...
    <string name="app_name">Quizlet</string>
    <string name="app_title" translatable="false">QuApp</string>
    <string name="app_login_email_example" translatable="false">fake@mail.com</string>
    <string name="app_login_email_description">Email:</string>
    <string name="app_login_password_example" translatable="false">*******</string>
    <string name="app_login_pw_description">Password:</string>
    <string name="app_login_button">Login</string>
    <string name="app_login_register">Register</string>
    <string name="app_start_play_button">Play</string>
    <string name="app_start_exit_button">Exit</string>
    <string name="app_start_layout_start_button" translatable="false">Layout_Start</string>
    <string name="app_start_layout_plus_button" translatable="false">Layout_Plus</string>
    <string name="app_start_layout_profile_button" translatable="false">Layout_Profile</string>
    <string name="app_start_layout_highscore_button" translatable="false">Layout_Highscore</string>
...
