...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <Button
        android:id="@+id/button_start"
        android:layout_width="354dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/app_start_play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_account"
        android:layout_width="354dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_account_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
...
