...
            android:focusable="true"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="550dp" />

        <ImageView
            android:id="@+id/settings"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/app_start_layout_settings_button"
...
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="578dp" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/main_fragment_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
